Add malware scanning functionality and related configurations